# dex

./: .c8rc.json  .eslintignore  .eslintrc.cjs  .gitignore  .lefthook.yml  .npmignore  .prettierignore  README.md  eslint.config.js  jest.config.json  package-lock.json  package.json  tsconfig.dist.json  tsconfig.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: auto-merge.yml  dev-build.yml  new-issues.yml  npm-publish.yml  npm-published-simulation.yml  pr-deployer.yml  pr-rebase-needed.yml  prod-build.yml  review-deploy.yml  stage-build.yml  sync-play.yml  test-build.yml  test.yml  testing.yml
cloud-function/: .env-dist  .gcloudignore  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
cloud-function/src/: app.js  app.test.js  app.ts  build-canonicals.js  build-redirects.js  build-redirects.ts  canonicals.js  env.js  headers.js  headers.ts  proxy-content.test.js  proxy-helpers.js  proxy-shared-assets.test.js  redirects.js  utils.js  utils.ts
deployer/: README.md  pyproject.toml
deployer-js/: README.md  constants.js  main.js  package-lock.json  package.json  tsconfig.json
deployer-js/search/: index.js  models.js  test_search.js
deployer/src/deployer/: utils.py
deployer/src/deployer/search/: __init__.py  models.py
libs/constants/: index.d.ts  index.js  index.test.ts  (+1 more)
scripts/: ai-help-macros.js  ai-help-macros.ts  env.js  reorder-search-index.mjs  types.d.ts
tests/: caching-tests.js
tool/: cli.js  cli.ts  whatsdeployed.js  whatsdeployed.ts
(+98 files in other folders)
