[tool.poetry]
name = "deployer"
version = "0.1.0"
license = "MPL-2.0"
description = "Upload the files that Dex built"
authors = ["MDN Devs <mdn-dev@mozilla.com>"]
repository = "https://github.com/mdn/dex"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.3.1"
python-decouple = "^3.8"
selectolax = "^0.4.1"
elasticsearch = "^9.3.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^26.1"
flake8 = "^7.3.0"
pytest = "^9.0.2"

[tool.poetry.scripts]
deployer = "deployer.main:cli"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
